--- a/packages/pulumi/package.json
+++ b/packages/pulumi/package.json
@@ -29,6 +29,9 @@
     "@t3-oss/env-core": "^0.7.1",
     "zod": "^3.22.4"
   },
+  "devDependencies": {
+    "@total-typescript/ts-reset": "^0.5.1"
+  },
   "engines": {
     "node": ">=18.0.0 <19.0.0",
     "pnpm": ">=8.0.0",
@@ -36,8 +39,5 @@
     "npm": "use-pnpm"
   },
   "packageManager": "pnpm@8.7.6",
-  "prettier": "@pedaki/prettier-config",
-  "devDependencies": {
-    "@total-typescript/ts-reset": "^0.5.1"
-  }
+  "prettier": "@pedaki/prettier-config"
 }
