--- a/cron/demo-community/Dockerfile
+++ b/cron/demo-community/Dockerfile
@@ -16,6 +16,7 @@ COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 
 COPY packages/db/package.json ./packages/db/
 COPY packages/services/package.json ./packages/services/
+COPY packages/pulumi/package.json ./packages/pulumi/
 COPY packages/models/package.json ./packages/models/
 COPY cron/demo-community/package.json ./cron/demo-community/
 
@@ -46,17 +47,51 @@ COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/packages/db/dist ./node_modules/@pedaki/db
 COPY --from=builder /app/packages/models/dist ./node_modules/@pedaki/models
 COPY --from=builder /app/packages/services/dist ./node_modules/@pedaki/services
+COPY --from=builder /app/packages/pulumi/dist ./node_modules/@pedaki/pulumi
 COPY --from=builder /app/cron/demo-community/dist ./dist
 
-## Load public env vars
+## Load env vars
 ARG PORT=8000
+
 ARG DATABASE_URL
 ARG PRISMA_ENCRYPTION_KEY
 
+ARG PULUMI_ACCESS_TOKEN
+
+ARG CLOUDFLARE_API_TOKEN
+ARG CLOUDFLARE_ZONE_ID
+
+ARG AWS_SECRET_ACCESS_KEY
+ARG AWS_ACCESS_KEY_ID
+
+ARG APP_DOCKER_HOST
+ARG APP_DOCKER_ORGANISATION
+ARG APP_DOCKER_PACKAGE_NAME
+ARG APP_DOCKER_IMAGE_VERSION="latest"
+ARG APP_DOCKER_USERNAME
+ARG APP_DOCKER_PASSWORD
+
+
 ENV PORT=$PORT
 ENV NODE_ENV=production
+
 ENV DATABASE_URL=$DATABASE_URL
 ENV PRISMA_ENCRYPTION_KEY=$PRISMA_ENCRYPTION_KEY
+
+ENV PULUMI_ACCESS_TOKEN=$PULUMI_ACCESS_TOKEN
+
+ENV CLOUDFLARE_API_TOKEN=$CLOUDFLARE_API_TOKEN
+ENV CLOUDFLARE_ZONE_ID=$CLOUDFLARE_ZONE_ID
+
+ENV AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+ENV AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+
+ENV APP_DOCKER_HOST=$APP_DOCKER_HOST
+ENV APP_DOCKER_ORGANISATION=$APP_DOCKER_ORGANISATION
+ENV APP_DOCKER_PACKAGE_NAME=$APP_DOCKER_PACKAGE_NAME
+ENV APP_DOCKER_IMAGE_VERSION=$APP_DOCKER_IMAGE_VERSION
+ENV APP_DOCKER_USERNAME=$APP_DOCKER_USERNAME
+ENV APP_DOCKER_PASSWORD=$APP_DOCKER_PASSWORD
 
 EXPOSE $PORT
 
