--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -47,6 +47,7 @@ RUN cp -r tmp/.prisma node_modules
 FROM base  AS runner
 WORKDIR /app
 
+# Install pulumi
 RUN curl -fsSL https://get.pulumi.com | sh
 ENV PATH="/root/.pulumi/bin:$PATH"
 
