--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -22,6 +22,9 @@
   "dependencies": {
     "zod": "^3.22.4"
   },
+  "devDependencies": {
+    "@prisma/client": "^5.5.2"
+  },
   "engines": {
     "node": ">=18.0.0 <19.0.0",
     "pnpm": ">=8.0.0",
