--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "start": "dotenv -- turbo run start",
     "build": "dotenv -- turbo run build",
     "build:watch": "dotenv -- turbo run build:watch",
-    "test": "cross-env NODE_ENV=test dotenv -e .env.test -c -- turbo run test",
-    "test:coverage": "NODE_ENV=test dotenv -e .env.test -c -- turbo run test:coverage",
-    "test:watch": "NODE_ENV=test dotenv -e .env.test -c -- turbo run test:watch",
+    "test": "NODE_ENV=test dotenv -e .env.test -c -- vitest",
+    "test:coverage": "NODE_ENV=test dotenv -e .env.test -c -- vitest --coverage",
+    "test:watch": "NODE_ENV=test dotenv -e .env.test -c -- vitest --watch",
     "dev": "dotenv -- turbo run dev",
     "lint": "cross-env SKIP_ENV_VALIDATION=true turbo run lint",
     "format:check": "turbo run format:check",
