pass token to stack env vars

--- a/package.json
+++ b/package.json
@@ -39,9 +39,10 @@
     "dotenv-cli": "latest",
     "esbuild-plugin-file-path-extensions": "^1.0.0",
     "execa": "^8.0.1",
+    "expect-type": "^0.17.3",
     "fs-extra": "^11.1.1",
-    "rimraf": "latest",
     "lint-staged": "^15.1.0",
+    "rimraf": "latest",
     "tsconfig-replace-paths": "^0.0.14",
     "tsup": "^7.2.0",
     "turbo": "^1.10.16",
