--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "start": "dotenv -- turbo run start",
     "build": "dotenv -- turbo run build",
     "build:watch": "dotenv -- turbo run build:watch",
-    "test": "cross-env NODE_ENV=test dotenv -e .env.test -c -- turbo run test",
-    "test:coverage": "NODE_ENV=test dotenv -e .env.test -c -- turbo run test:coverage",
-    "test:watch": "NODE_ENV=test dotenv -e .env.test -c -- turbo run test:watch",
+    "test": "NODE_ENV=test dotenv -e .env.test -c -- vitest",
+    "test:coverage": "NODE_ENV=test dotenv -e .env.test -c -- vitest --coverage",
+    "test:watch": "NODE_ENV=test dotenv -e .env.test -c -- vitest --watch",
     "dev": "dotenv -- turbo run dev",
     "lint": "cross-env SKIP_ENV_VALIDATION=true turbo run lint",
     "format:check": "turbo run format:check",
@@ -31,7 +31,7 @@
     "@pedaki/eslint-config": "^0.1.2",
     "@pedaki/prettier-config": "^0.0.5",
     "@total-typescript/ts-reset": "^0.5.1",
-    "@types/fs-extra": "^11.0.3",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^18.18.0",
     "@vitest/coverage-v8": "^0.34.6",
     "cpy": "^11.0.0",
@@ -39,9 +39,10 @@
     "dotenv-cli": "latest",
     "esbuild-plugin-file-path-extensions": "^1.0.0",
     "execa": "^8.0.1",
+    "expect-type": "^0.17.3",
     "fs-extra": "^11.1.1",
+    "lint-staged": "^15.1.0",
     "rimraf": "latest",
-    "lint-staged": "^15.0.2",
     "tsconfig-replace-paths": "^0.0.14",
     "tsup": "^7.2.0",
     "turbo": "^1.10.16",
