--- a/cron/demo-community/Dockerfile
+++ b/cron/demo-community/Dockerfile
@@ -43,15 +43,16 @@ RUN cp -r tmp/.prisma node_modules
 FROM base AS runner
 WORKDIR /app
 
+# Install pulumi
+RUN curl -fsSL https://get.pulumi.com | sh
+ENV PATH="/root/.pulumi/bin:$PATH"
+
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/packages/db/dist ./node_modules/@pedaki/db
 COPY --from=builder /app/packages/models/dist ./node_modules/@pedaki/models
 COPY --from=builder /app/packages/services/dist ./node_modules/@pedaki/services
 COPY --from=builder /app/packages/pulumi/dist ./node_modules/@pedaki/pulumi
 COPY --from=builder /app/cron/demo-community/dist ./dist
-
-## Load env vars
-ARG PORT=8000
 
 ARG DATABASE_URL
 ARG PRISMA_ENCRYPTION_KEY
@@ -72,7 +73,6 @@ ARG APP_DOCKER_USERNAME
 ARG APP_DOCKER_PASSWORD
 
 
-ENV PORT=$PORT
 ENV NODE_ENV=production
 
 ENV DATABASE_URL=$DATABASE_URL
@@ -93,6 +93,6 @@ ENV APP_DOCKER_IMAGE_VERSION=$APP_DOCKER_IMAGE_VERSION
 ENV APP_DOCKER_USERNAME=$APP_DOCKER_USERNAME
 ENV APP_DOCKER_PASSWORD=$APP_DOCKER_PASSWORD
 
-EXPOSE $PORT
+RUN pulumi org set-default pedaki
 
 CMD ["node", "dist/index.js"]
