--- a/cron/demo-community/package.json
+++ b/cron/demo-community/package.json
@@ -21,6 +21,7 @@
   "author": "Nathan David <me@vahor.fr>",
   "license": "MIT",
   "dependencies": {
+    "@pedaki/db": "workspace:*",
     "@pedaki/services": "workspace:*",
     "@pedaki/pulumi": "workspace:*",
     "@t3-oss/env-core": "^0.7.1",
@@ -28,7 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.18",
-    "tsx": "^3.14.0"
+    "tsx": "^4.1.2"
   },
   "engines": {
     "node": ">=18.0.0 <19.0.0",
