--- a/packages/pulumi/package.json
+++ b/packages/pulumi/package.json
@@ -11,7 +11,9 @@
     "lint": "eslint . --cache",
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
     "format": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
-    "typecheck": "tsc --noEmit --declaration"
+    "typecheck": "tsc --noEmit --declaration",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "publishConfig": {
     "directory": "dist"
@@ -24,7 +26,7 @@
     "@pedaki/models": "workspace:*",
     "@pulumi/aws": "^6.8.0",
     "@pulumi/cloudflare": "^5.14.0",
-    "@pulumi/pulumi": "^3.92.0",
+    "@pulumi/pulumi": "^3.93.0",
     "@pulumi/random": "^4.14.0",
     "@t3-oss/env-core": "^0.7.1",
     "zod": "^3.22.4"
