--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -25,9 +25,13 @@
     "@pedaki/models": "workspace:*",
     "@pedaki/pulumi": "workspace:*",
     "@t3-oss/env-core": "^0.7.1",
-    "@trpc/server": "10.43.1",
-    "stripe": "^14.3.0",
+    "exponential-backoff": "^3.1.1",
+    "stripe": "^14.4.0",
     "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@trpc/server": "10.43.3",
+    "@prisma/client": "^5.5.2"
   },
   "engines": {
     "node": ">=18.0.0 <19.0.0",
@@ -36,8 +40,5 @@
     "npm": "use-pnpm"
   },
   "packageManager": "pnpm@8.7.6",
-  "prettier": "@pedaki/prettier-config",
-  "devDependencies": {
-    "@prisma/client": "^5.5.2"
-  }
+  "prettier": "@pedaki/prettier-config"
 }
