--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -11,8 +11,8 @@
   "scripts": {
     "build": "prisma generate && tsup",
     "lint": "eslint . --cache",
-    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
-    "format": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
+    "format": "prisma format && prettier --write \"**/*.{ts,tsx,mdx}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\"",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
