--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@planetscale/database": "^1.11.0",
-    "@prisma/adapter-planetscale": "^5.6.0",
+    "@prisma/adapter-planetscale": "5.7.0-integration-fix-export-map.3",
     "@prisma/client": "^5.6.0",
     "prisma-field-encryption": "^1.5.0"
   },
