--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -35,7 +35,7 @@
     "next-auth": "^4.24.5",
     "superjson": "^2.2.1",
     "trpc-openapi": "^1.2.0",
-    "@pedaki/common": "^0.1.4",
+    "@pedaki/common": "0.4.2-beta.9",
     "@pedaki/services": "workspace:*",
     "@pedaki/models": "workspace:*",
     "@t3-oss/env-core": "^0.7.1",
