--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -26,7 +26,7 @@
     "@auth/prisma-adapter": "^1.0.8",
     "@hookform/resolvers": "^3.3.2",
     "@pedaki/api": "workspace:*",
-    "@pedaki/common": "^0.1.4",
+    "@pedaki/common": "0.4.2-beta.9",
     "@pedaki/db": "workspace:*",
     "@pedaki/models": "workspace:*",
     "@pedaki/design": "^0.4.1",
