--- a/packages/pulumi/package.json
+++ b/packages/pulumi/package.json
@@ -22,7 +22,7 @@
   "author": "Nathan David <me@vahor.fr>",
   "license": "MIT",
   "dependencies": {
-    "@pedaki/common": "^0.1.4",
+    "@pedaki/common": "0.4.2-beta.9",
     "@pedaki/models": "workspace:*",
     "@pulumi/aws": "^6.10.0",
     "@pulumi/cloudflare": "^5.15.0",
