feat: :sparkles: use jwt for stripe success and cancel urls

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,8 @@ STRIPE_WEBHOOK_SECRET=""
 STRIPE_PRODUCT_HOSTED_MONTHLY_PRICE_ID="price_1NyhGDGjIZI03z0TsT9T7Om0"
 STRIPE_PRODUCT_HOSTED_YEARLY_PRICE_ID="price_1O98OHGjIZI03z0TE6620OPO"
 
+JWT_PRIVATE_KEY="supersecretsupersecret"
+
 API_INTERNAL_SECRET="supersecretsupersecret"
 API_ENCRYPTION_KEY="supersecretsupersecretsupersecre" # 32 bytes
 
