--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -29,7 +29,7 @@
     "@pedaki/common": "0.4.2-beta.9",
     "@pedaki/db": "workspace:*",
     "@pedaki/models": "workspace:*",
-    "@pedaki/design": "^0.4.1",
+    "@pedaki/design": "0.4.2-beta.9",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "10.44.1",
