--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -26,12 +26,14 @@
     "@pedaki/pulumi": "workspace:*",
     "@t3-oss/env-core": "^0.7.1",
     "exponential-backoff": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "stripe": "^14.5.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@prisma/client": "^5.6.0",
     "@trpc/server": "10.44.1",
-    "@prisma/client": "^5.6.0"
+    "@types/jsonwebtoken": "^9.0.5"
   },
   "engines": {
     "node": ">=18.0.0 <19.0.0",
