--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -19,7 +19,9 @@
     "@planetscale/database": "^1.11.0",
     "@prisma/adapter-planetscale": "5.7.0-integration-fix-export-map.3",
     "@prisma/client": "^5.6.0",
-    "prisma-field-encryption": "^1.5.0"
+    "prisma-field-encryption": "^1.5.0",
+    "@t3-oss/env-core": "^0.7.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "prisma": "^5.6.0"
