--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "@pedaki/cron-demo-community",
+  "name": "@pedaki/logger",
   "version": "1.0.0",
   "description": "",
+  "private": true,
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "tsx src/index",
-    "dev:watch": "tsx watch src/index",
     "build": "tsup --clean",
-    "start": "node dist/index.js",
+    "build:watch": "tsup --watch",
     "lint": "eslint .",
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\"",
     "format": "prettier --write \"**/*.{ts,tsx,mdx}\"",
@@ -21,16 +20,10 @@
   "author": "Nathan David <me@vahor.fr>",
   "license": "MIT",
   "dependencies": {
-    "@pedaki/db": "workspace:*",
-    "@pedaki/services": "workspace:*",
-    "@pedaki/logger": "workspace:*",
-    "@pedaki/pulumi": "workspace:*",
+    "@baselime/winston-transport": "^0.1.2",
+    "winston": "^3.11.0",
     "@t3-oss/env-core": "^0.7.1",
     "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@types/node": "^18.18",
-    "tsx": "^4.5.0"
   },
   "engines": {
     "node": ">=18.0.0 <19.0.0",
