--- a/cron/clear-old-data/Dockerfile
+++ b/cron/clear-old-data/Dockerfile
@@ -15,6 +15,7 @@ COPY .npmrc ./
 COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 
 COPY packages/db/package.json ./packages/db/
+COPY packages/logger/package.json ./packages/logger/
 COPY cron/clear-old-data/package.json ./cron/clear-old-data/
 
 RUN --mount=type=cache,id=s/0eb7c8d5-3796-4b22-b0dc-988ca0084b57-/pnpm,target=/pnpm/store pnpm install --frozen-lockfile
@@ -42,6 +43,7 @@ WORKDIR /app
 
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/packages/db/dist ./node_modules/@pedaki/db
+COPY --from=builder /app/packages/logger/dist ./node_modules/@pedaki/logger
 COPY --from=builder /app/cron/clear-old-data/dist ./dist
 
 ## Load public env vars
@@ -50,11 +52,25 @@ ARG DATABASE_URL
 ARG PRISMA_ENCRYPTION_KEY
 ARG PENDING_MAX_AGE
 
+# Logger
+ARG BASELIME_API_KEY
+ARG LOGGER_SERVICE_NAME=api
+ARG LOGGER_USE_CONSOLE
+ARG LOGGER_LEVEL
+
+###
+
 ENV PORT=$PORT
 ENV NODE_ENV=production
 ENV DATABASE_URL=$DATABASE_URL
 ENV PRISMA_ENCRYPTION_KEY=$PRISMA_ENCRYPTION_KEY
 ENV PENDING_MAX_AGE=$PENDING_MAX_AGE
+
+# Logger
+ENV BASELIME_API_KEY=$BASELIME_API_KEY
+ENV LOGGER_SERVICE_NAME=$LOGGER_SERVICE_NAME
+ENV LOGGER_USE_CONSOLE=$LOGGER_USE_CONSOLE
+ENV LOGGER_LEVEL=$LOGGER_LEVEL
 
 EXPOSE $PORT
 
