--- a/cron/demo-community/Dockerfile
+++ b/cron/demo-community/Dockerfile
@@ -72,6 +72,14 @@ ARG APP_DOCKER_ORGANISATION
 ARG APP_DOCKER_PACKAGE_NAME
 ARG APP_DOCKER_IMAGE_VERSION="latest"
 
+# Logger
+ARG BASELIME_API_KEY
+ARG LOGGER_SERVICE_NAME=api
+ARG LOGGER_USE_CONSOLE
+ARG LOGGER_LEVEL
+
+###
+
 ENV NODE_ENV=production
 
 ENV DATABASE_URL=$DATABASE_URL
@@ -89,6 +97,12 @@ ENV APP_DOCKER_HOST=$APP_DOCKER_HOST
 ENV APP_DOCKER_ORGANISATION=$APP_DOCKER_ORGANISATION
 ENV APP_DOCKER_PACKAGE_NAME=$APP_DOCKER_PACKAGE_NAME
 ENV APP_DOCKER_IMAGE_VERSION=$APP_DOCKER_IMAGE_VERSION
+
+# Logger
+ENV BASELIME_API_KEY=$BASELIME_API_KEY
+ENV LOGGER_SERVICE_NAME=$LOGGER_SERVICE_NAME
+ENV LOGGER_USE_CONSOLE=$LOGGER_USE_CONSOLE
+ENV LOGGER_LEVEL=$LOGGER_LEVEL
 
 RUN pulumi org set-default pedaki
 
