--- a/packages/pulumi/package.json
+++ b/packages/pulumi/package.json
@@ -23,6 +23,7 @@
   "license": "MIT",
   "dependencies": {
     "@pedaki/common": "0.4.2-beta.9",
+    "@pedaki/logger": "workspace:*",
     "@pedaki/models": "workspace:*",
     "@pulumi/aws": "^6.10.0",
     "@pulumi/cloudflare": "^5.15.0",
