--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@pedaki/common": "0.4.2-beta.9",
     "@pedaki/db": "workspace:*",
+    "@pedaki/logger": "workspace:*",
     "@pedaki/models": "workspace:*",
     "@pedaki/pulumi": "workspace:*",
     "@t3-oss/env-core": "^0.7.1",
