--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -21,8 +21,9 @@
   "license": "MIT",
   "dependencies": {
     "@baselime/winston-transport": "^0.1.2",
-    "winston": "^3.11.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.40.1",
     "@t3-oss/env-core": "^0.7.1",
+    "winston": "^3.11.0",
     "zod": "^3.22.4"
   },
   "engines": {
