--- a/cron/clear-old-data/package.json
+++ b/cron/clear-old-data/package.json
@@ -8,7 +8,7 @@
     "dev": "tsx watch src/index",
     "build": "tsup --clean",
     "start": "node dist/index.js",
-    "lint": "eslint . --cache",
+    "lint": "eslint .",
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
     "format": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
     "typecheck": "tsc --noEmit --declaration"
