--- a/cron/demo-community/Dockerfile
+++ b/cron/demo-community/Dockerfile
@@ -74,7 +74,7 @@ ARG APP_DOCKER_IMAGE_VERSION="latest"
 
 # Logger
 ARG BASELIME_API_KEY
-ARG LOGGER_SERVICE_NAME=api
+ARG LOGGER_SERVICE_NAME=cron-demo
 ARG LOGGER_LEVEL
 
 ###
