feat: add winston logger (#37)

--- a/cron/demo-community/Dockerfile
+++ b/cron/demo-community/Dockerfile
@@ -18,6 +18,7 @@ COPY packages/db/package.json ./packages/db/
 COPY packages/services/package.json ./packages/services/
 COPY packages/pulumi/package.json ./packages/pulumi/
 COPY packages/models/package.json ./packages/models/
+COPY packages/logger/package.json ./packages/logger/
 COPY cron/demo-community/package.json ./cron/demo-community/
 
 RUN --mount=type=cache,id=s/abdf597f-fa85-4c66-a7e0-b512707bd711-/pnpm,target=/pnpm/store pnpm install --frozen-lockfile
@@ -52,6 +53,8 @@ COPY --from=builder /app/packages/db/dist ./node_modules/@pedaki/db
 COPY --from=builder /app/packages/models/dist ./node_modules/@pedaki/models
 COPY --from=builder /app/packages/services/dist ./node_modules/@pedaki/services
 COPY --from=builder /app/packages/pulumi/dist ./node_modules/@pedaki/pulumi
+COPY --from=builder /app/packages/logger/dist ./node_modules/@pedaki/logger
+COPY --from=builder /app/packages/logger/package.json ./node_modules/@pedaki/package.json
 COPY --from=builder /app/cron/demo-community/dist ./dist
 
 ARG DATABASE_URL
@@ -68,7 +71,13 @@ ARG AWS_ACCESS_KEY_ID
 ARG APP_DOCKER_HOST
 ARG APP_DOCKER_ORGANISATION
 ARG APP_DOCKER_PACKAGE_NAME
-ARG APP_DOCKER_IMAGE_VERSION="latest"
+
+# Logger
+ARG BASELIME_API_KEY
+ARG LOGGER_SERVICE_NAME=cron-demo
+ARG LOGGER_LEVEL
+
+###
 
 ENV NODE_ENV=production
 
@@ -86,7 +95,11 @@ ENV AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
 ENV APP_DOCKER_HOST=$APP_DOCKER_HOST
 ENV APP_DOCKER_ORGANISATION=$APP_DOCKER_ORGANISATION
 ENV APP_DOCKER_PACKAGE_NAME=$APP_DOCKER_PACKAGE_NAME
-ENV APP_DOCKER_IMAGE_VERSION=$APP_DOCKER_IMAGE_VERSION
+
+# Logger
+ENV BASELIME_API_KEY=$BASELIME_API_KEY
+ENV LOGGER_SERVICE_NAME=$LOGGER_SERVICE_NAME
+ENV LOGGER_LEVEL=$LOGGER_LEVEL
 
 RUN pulumi org set-default pedaki
 
