--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -24,21 +24,24 @@
   "license": "MIT",
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.8",
+    "@baselime/node-opentelemetry": "^0.2.14",
     "@fastify/cookie": "^9.2.0",
     "@fastify/cors": "^8.4.1",
+    "@opentelemetry/instrumentation-fastify": "^0.32.4",
+    "@pedaki/common": "0.4.2-beta.9",
     "@pedaki/db": "workspace:*",
+    "@pedaki/logger": "workspace:*",
     "@pedaki/mailer": "^0.0.8",
+    "@pedaki/models": "workspace:*",
     "@pedaki/pulumi": "workspace:*",
+    "@pedaki/services": "workspace:*",
+    "@t3-oss/env-core": "^0.7.1",
     "@trpc/server": "10.44.1",
     "fastify": "^4.24.3",
     "fastify-raw-body": "^4.3.0",
     "next-auth": "^4.24.5",
     "superjson": "^2.2.1",
     "trpc-openapi": "^1.2.0",
-    "@pedaki/common": "0.4.2-beta.9",
-    "@pedaki/services": "workspace:*",
-    "@pedaki/models": "workspace:*",
-    "@t3-oss/env-core": "^0.7.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
