--- a/cron/demo-community/package.json
+++ b/cron/demo-community/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@pedaki/db": "workspace:*",
     "@pedaki/services": "workspace:*",
+    "@pedaki/logger": "workspace:*",
     "@pedaki/pulumi": "workspace:*",
     "@t3-oss/env-core": "^0.7.1",
     "zod": "^3.22.4"
