--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pedaki/services",
+  "name": "@pedaki/logger",
   "version": "1.0.0",
   "description": "",
   "private": true,
@@ -20,21 +20,11 @@
   "author": "Nathan David <me@vahor.fr>",
   "license": "MIT",
   "dependencies": {
-    "@pedaki/common": "0.4.2-beta.9",
-    "@pedaki/db": "workspace:*",
-    "@pedaki/logger": "workspace:*",
-    "@pedaki/models": "workspace:*",
-    "@pedaki/pulumi": "workspace:*",
+    "@baselime/winston-transport": "^0.1.2",
+    "@opentelemetry/auto-instrumentations-node": "^0.40.1",
     "@t3-oss/env-core": "^0.7.1",
-    "exponential-backoff": "^3.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "stripe": "^14.5.0",
+    "winston": "^3.11.0",
     "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@prisma/client": "^5.6.0",
-    "@trpc/server": "10.44.1",
-    "@types/jsonwebtoken": "^9.0.5"
   },
   "engines": {
     "node": ">=18.0.0 <19.0.0",
