--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -27,6 +27,8 @@
     "@pedaki/pulumi": "workspace:*",
     "@t3-oss/env-core": "^0.7.1",
     "exponential-backoff": "^3.1.1",
+    "flat": "^6.0.1",
+    "@opentelemetry/api": "^1.7.0",
     "jsonwebtoken": "^9.0.2",
     "stripe": "^14.5.0",
     "zod": "^3.22.4"
