fix: node experimental warning

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -89,6 +89,7 @@ ENV API_INTERNAL_SECRET=$API_INTERNAL_SECRET
 ENV API_ENCRYPTION_KEY=$API_ENCRYPTION_KEY
 
 ENV NODE_ENV=production
+ENV NODE_OPTIONS="--experimental-modules"
 ENV SKIP_SERVER_ENV_CHECK=true
 
 # Logger
