--- a/cron/clear-old-data/Dockerfile
+++ b/cron/clear-old-data/Dockerfile
@@ -62,6 +62,7 @@ ARG LOGGER_LEVEL
 
 ENV PORT=$PORT
 ENV NODE_ENV=production
+ENV NODE_OPTIONS="--experimental-modules"
 ENV DATABASE_URL=$DATABASE_URL
 ENV PRISMA_ENCRYPTION_KEY=$PRISMA_ENCRYPTION_KEY
 ENV PENDING_MAX_AGE=$PENDING_MAX_AGE
