--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,7 +27,7 @@
     "@baselime/node-opentelemetry": "^0.2.14",
     "@fastify/cookie": "^9.2.0",
     "@fastify/cors": "^8.4.1",
-    "@opentelemetry/api": "^1.7.0",
+    "@opentelemetry/api": "1.6.0",
     "@opentelemetry/instrumentation-fastify": "^0.32.4",
     "@pedaki/common": "0.4.2-beta.9",
     "@pedaki/db": "workspace:*",
