--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -20,8 +20,8 @@
   "author": "Nathan David <me@vahor.fr>",
   "license": "MIT",
   "dependencies": {
+    "@opentelemetry/api": "^1.7.0",
     "@baselime/winston-transport": "^0.1.2",
-    "@opentelemetry/auto-instrumentations-node": "^0.40.1",
     "@t3-oss/env-core": "^0.7.1",
     "winston": "^3.11.0",
     "zod": "^3.22.4"
