--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -26,10 +26,10 @@
     "@auth/prisma-adapter": "^1.0.9",
     "@hookform/resolvers": "^3.3.2",
     "@pedaki/api": "workspace:*",
-    "@pedaki/common": "0.4.2-beta.10",
+    "@pedaki/common": "^0.4.2-beta.11",
     "@pedaki/db": "workspace:*",
     "@pedaki/models": "workspace:*",
-    "@pedaki/design": "0.4.2-beta.10",
+    "@pedaki/design": "^0.4.2-beta.11",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "10.44.1",
