--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "husky": "^8.0.3"
   },
   "devDependencies": {
-    "@pedaki/eslint-config": "^0.1.2",
-    "@pedaki/prettier-config": "^0.0.5",
+    "@pedaki/eslint-config": "^0.4.2-beta.11",
+    "@pedaki/prettier-config": "^0.4.2-beta.11",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^18.18.0",
-    "@vitest/coverage-v8": "^1.0.1",
+    "@vitest/coverage-v8": "^1.0.2",
     "cpy": "^11.0.0",
     "cross-env": "^7.0.3",
     "dotenv-cli": "latest",
@@ -47,8 +47,8 @@
     "tsconfig-replace-paths": "^0.0.14",
     "tsup": "^8.0.1",
     "turbo": "^1.11.0",
-    "typescript": "^5.3.2",
-    "vitest": "^1.0.1"
+    "typescript": "^5.3.3",
+    "vitest": "^1.0.2"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
