--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -17,15 +17,15 @@
   },
   "dependencies": {
     "@planetscale/database": "^1.11.0",
-    "@prisma/adapter-planetscale": "5.7.0-integration-fix-export-map.3",
-    "@prisma/client": "^5.6.0",
-    "@prisma/instrumentation": "^5.6.0",
+    "@prisma/adapter-planetscale": "5.7.0",
+    "@prisma/client": "^5.7.0",
+    "@prisma/instrumentation": "^5.7.0",
     "@t3-oss/env-core": "^0.7.1",
     "prisma-field-encryption": "^1.5.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "prisma": "^5.6.0"
+    "prisma": "^5.7.0"
   },
   "engines": {
     "node": ">=18.0.0 <19.0.0",
