--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,13 +23,14 @@
   "author": "Nathan David <me@vahor.fr>",
   "license": "MIT",
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.8",
+    "@auth/prisma-adapter": "^1.0.9",
     "@baselime/node-opentelemetry": "^0.2.14",
     "@fastify/cookie": "^9.2.0",
-    "@fastify/cors": "^8.4.1",
+    "@fastify/cors": "^8.4.2",
     "@opentelemetry/api": "1.7.0",
-    "@opentelemetry/instrumentation-fastify": "^0.32.4",
-    "@pedaki/common": "0.4.2-beta.9",
+    "@opentelemetry/instrumentation-fastify": "^0.32.5",
+    "@opentelemetry/sdk-trace-node": "^1.18.1",
+    "@pedaki/common": "^0.4.2-beta.11",
     "@pedaki/db": "workspace:*",
     "@pedaki/logger": "workspace:*",
     "@pedaki/mailer": "^0.0.8",
@@ -50,7 +51,7 @@
     "@types/node": "^18.18.0",
     "esbuild-plugin-tsconfig-paths": "^1.0.1",
     "preview-email": "^3.0.19",
-    "tsx": "^4.6.0"
+    "tsx": "^4.6.2"
   },
   "engines": {
     "node": ">=18.0.0 <19.0.0",
