--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -23,13 +23,13 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.8",
+    "@auth/prisma-adapter": "^1.0.9",
     "@hookform/resolvers": "^3.3.2",
     "@pedaki/api": "workspace:*",
-    "@pedaki/common": "0.4.2-beta.9",
+    "@pedaki/common": "^0.4.2-beta.11",
     "@pedaki/db": "workspace:*",
     "@pedaki/models": "workspace:*",
-    "@pedaki/design": "0.4.2-beta.9",
+    "@pedaki/design": "^0.4.2-beta.11",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "10.44.1",
@@ -38,21 +38,21 @@
     "@trpc/server": "10.44.1",
     "dayjs": "^1.11.10",
     "million": "^2.6.4",
-    "next": "14.0.3",
+    "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-wrap-balancer": "^1.1.0",
-    "sharp": "^0.32.6",
+    "sharp": "^0.33.0",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@pedaki/eslint-config": "^0.1.2",
     "@pedaki/prettier-config": "^0.0.5",
-    "@types/react": "^18.2.39",
+    "@types/react": "^18.2.42",
     "@types/sanitize-html": "^2.9.5",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31"
+    "postcss": "^8.4.32"
   },
   "engines": {
     "node": ">=18.0.0 <19.0.0",
