--- a/packages/pulumi/package.json
+++ b/packages/pulumi/package.json
@@ -22,12 +22,12 @@
   "author": "Nathan David <me@vahor.fr>",
   "license": "MIT",
   "dependencies": {
-    "@pedaki/common": "0.4.2-beta.9",
+    "@pedaki/common": "^0.4.2-beta.11",
     "@pedaki/logger": "workspace:*",
     "@pedaki/models": "workspace:*",
-    "@pulumi/aws": "^6.10.0",
-    "@pulumi/cloudflare": "^5.15.0",
-    "@pulumi/pulumi": "^3.94.2",
+    "@pulumi/aws": "^6.13.2",
+    "@pulumi/cloudflare": "^5.16.0",
+    "@pulumi/pulumi": "^3.96.1",
     "@pulumi/random": "^4.14.0",
     "@t3-oss/env-core": "^0.7.1",
     "zod": "^3.22.4"
