--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -20,7 +20,7 @@
   "author": "Nathan David <me@vahor.fr>",
   "license": "MIT",
   "dependencies": {
-    "@pedaki/common": "0.4.2-beta.9",
+    "@pedaki/common": "^0.4.2-beta.11",
     "@pedaki/db": "workspace:*",
     "@pedaki/logger": "workspace:*",
     "@pedaki/models": "workspace:*",
@@ -30,11 +30,11 @@
     "flat": "^6.0.1",
     "@opentelemetry/api": "1.7.0",
     "jsonwebtoken": "^9.0.2",
-    "stripe": "^14.5.0",
+    "stripe": "^14.8.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@prisma/client": "^5.6.0",
+    "@prisma/client": "^5.7.0",
     "@trpc/server": "10.44.1",
     "@types/jsonwebtoken": "^9.0.5"
   },
