--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -28,8 +28,8 @@
     "@pedaki/api": "workspace:*",
     "@pedaki/common": "^0.4.2",
     "@pedaki/db": "workspace:*",
-    "@pedaki/models": "workspace:*",
     "@pedaki/design": "^0.4.2",
+    "@pedaki/models": "workspace:*",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "10.44.1",
@@ -39,6 +39,7 @@
     "dayjs": "^1.11.10",
     "million": "^2.6.4",
     "next": "14.0.4",
+    "next-international": "^1.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-wrap-balancer": "^1.1.0",
