--- a/apps/store/tsconfig.json
+++ b/apps/store/tsconfig.json
@@ -19,8 +19,8 @@
     "incremental": true,
     "noUncheckedIndexedAccess": true,
     "composite": false,
-    "declaration": true,
-    "declarationMap": true,
+    "declaration": false,
+    "declarationMap": false,
     "inlineSources": false,
     "noUnusedLocals": false,
     "skipDefaultLibCheck": true,
