--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -31,6 +31,7 @@
     "@pedaki/design": "^0.4.2",
     "@pedaki/models": "workspace:*",
     "@t3-oss/env-nextjs": "^0.7.1",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "10.44.1",
     "@trpc/next": "10.44.1",
