--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -20,6 +20,8 @@
   "author": "Nathan David <me@vahor.fr>",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.478.0",
+    "@opentelemetry/api": "1.7.0",
     "@pedaki/common": "^0.4.2",
     "@pedaki/db": "workspace:*",
     "@pedaki/logger": "workspace:*",
@@ -28,9 +30,9 @@
     "@t3-oss/env-core": "^0.7.1",
     "exponential-backoff": "^3.1.1",
     "flat": "^6.0.1",
-    "@opentelemetry/api": "1.7.0",
     "jsonwebtoken": "^9.0.2",
     "stripe": "^14.10.0",
+    "throat": "^6.0.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
