--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -23,25 +23,25 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.1.0",
+    "@auth/prisma-adapter": "^1.3.3",
     "@hookform/resolvers": "^3.3.4",
     "@pedaki/api": "workspace:*",
-    "@pedaki/common": "^0.4.2",
+    "@pedaki/common": "0.5.2-beta.7",
     "@pedaki/db": "workspace:*",
-    "@pedaki/design": "^0.4.2",
+    "@pedaki/design": "0.5.2-beta.7",
     "@pedaki/models": "workspace:*",
-    "@t3-oss/env-nextjs": "^0.8.0",
+    "@t3-oss/env-nextjs": "^0.9.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/react-query": "^4.36.1",
-    "@trpc/client": "10.45.0",
-    "@trpc/next": "10.45.0",
-    "@trpc/react-query": "10.45.0",
-    "@trpc/server": "10.45.0",
+    "@trpc/client": "10.45.1",
+    "@trpc/next": "10.45.1",
+    "@trpc/react-query": "10.45.1",
+    "@trpc/server": "10.45.1",
     "cookies-next": "^4.1.1",
     "dayjs": "^1.11.10",
-    "million": "^2.6.4",
+    "million": "^3.0.3",
     "next": "14.1.0",
-    "next-international": "^1.2.3",
+    "next-international": "^1.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-wrap-balancer": "^1.1.0",
@@ -50,15 +50,15 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "@pedaki/eslint-config": "^0.4.2",
-    "@pedaki/prettier-config": "^0.4.2",
-    "@types/react": "^18.2.48",
-    "@types/sanitize-html": "^2.9.5",
+    "@pedaki/eslint-config": "0.5.2-beta.7",
+    "@pedaki/prettier-config": "0.5.2-beta.7",
+    "@types/react": "^18.2.55",
+    "@types/sanitize-html": "^2.11.0",
     "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.33"
+    "postcss": "^8.4.35"
   },
   "engines": {
-    "node": ">=18.0.0 <19.0.0",
+    "node": ">=20",
     "pnpm": ">=8.0.0",
     "yarn": "use-pnpm",
     "npm": "use-pnpm"
