--- a/cron/clear-old-data/package.json
+++ b/cron/clear-old-data/package.json
@@ -22,15 +22,15 @@
   "dependencies": {
     "@pedaki/db": "workspace:*",
     "@pedaki/logger": "workspace:*",
-    "@t3-oss/env-core": "^0.8.0",
+    "@t3-oss/env-core": "^0.9.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^18.19.10",
-    "tsx": "^4.7.0"
+    "@types/node": "^20.11.17",
+    "tsx": "^4.7.1"
   },
   "engines": {
-    "node": ">=18.0.0 <19.0.0",
+    "node": ">=20",
     "pnpm": ">=8.0.0",
     "yarn": "use-pnpm",
     "npm": "use-pnpm"
