--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -22,12 +22,12 @@
   "dependencies": {
     "@opentelemetry/api": "^1.7.0",
     "@baselime/winston-transport": "^0.1.2",
-    "@t3-oss/env-core": "^0.8.0",
+    "@t3-oss/env-core": "^0.9.2",
     "winston": "^3.11.0",
     "zod": "^3.22.4"
   },
   "engines": {
-    "node": ">=18.0.0 <19.0.0",
+    "node": ">=20",
     "pnpm": ">=8.0.0",
     "yarn": "use-pnpm",
     "npm": "use-pnpm"
