--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -20,28 +20,28 @@
   "author": "Nathan David <me@vahor.fr>",
   "license": "MIT",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.501.0",
+    "@aws-sdk/client-s3": "^3.511.0",
     "@opentelemetry/api": "1.7.0",
-    "@pedaki/common": "^0.4.2",
+    "@pedaki/common": "0.5.2-beta.7",
     "@pedaki/db": "workspace:*",
     "@pedaki/logger": "workspace:*",
     "@pedaki/models": "workspace:*",
     "@pedaki/pulumi": "workspace:*",
-    "@t3-oss/env-core": "^0.8.0",
+    "@t3-oss/env-core": "^0.9.2",
     "exponential-backoff": "^3.1.1",
     "flat": "^6.0.1",
     "jsonwebtoken": "^9.0.2",
-    "stripe": "^14.14.0",
+    "stripe": "^14.16.0",
     "throat": "^6.0.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@prisma/client": "^5.8.1",
-    "@trpc/server": "10.45.0",
+    "@prisma/client": "^5.9.1",
+    "@trpc/server": "10.45.1",
     "@types/jsonwebtoken": "^9.0.5"
   },
   "engines": {
-    "node": ">=18.0.0 <19.0.0",
+    "node": ">=20",
     "pnpm": ">=8.0.0",
     "yarn": "use-pnpm",
     "npm": "use-pnpm"
