--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "tsconfig-replace-paths": "^0.0.14",
     "tsup": "^8.0.2",
     "turbo": "^1.12.5",
-    "typescript": "^5.4.2",
+    "typescript": "5.3",
     "vitest": "^1.3.1"
   },
   "lint-staged": {
