test: disable baselime

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -30,10 +30,10 @@
     "@opentelemetry/api": "1.8.0",
     "@opentelemetry/instrumentation-fastify": "^0.34.0",
     "@opentelemetry/sdk-trace-node": "^1.22.0",
-    "@pedaki/common": "^0.4.2",
+    "@pedaki/common": "^0.5.2-beta.11",
     "@pedaki/db": "workspace:*",
     "@pedaki/logger": "workspace:*",
-    "@pedaki/mailer": "^0.4.2",
+    "@pedaki/mailer": "^0.5.2-beta.11",
     "@pedaki/models": "workspace:*",
     "@pedaki/pulumi": "workspace:*",
     "@pedaki/services": "workspace:*",
