--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -26,9 +26,9 @@
     "@auth/prisma-adapter": "^1.5.0",
     "@hookform/resolvers": "^3.3.4",
     "@pedaki/api": "workspace:*",
-    "@pedaki/common": "^0.4.2",
+    "@pedaki/common": "^0.5.2-beta.11",
     "@pedaki/db": "workspace:*",
-    "@pedaki/design": "^0.4.2",
+    "@pedaki/design": "^0.5.2-beta.11",
     "@pedaki/models": "workspace:*",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tailwindcss/container-queries": "^0.1.1",
@@ -40,7 +40,7 @@
     "cookies-next": "^4.1.1",
     "dayjs": "^1.11.10",
     "million": "^3.0.6",
-    "next": "14.1.3",
+    "next": "14.1.2",
     "next-international": "^1.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -50,8 +50,8 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@pedaki/eslint-config": "^0.4.2",
-    "@pedaki/prettier-config": "^0.4.2",
+    "@pedaki/eslint-config": "^0.5.2-beta.11",
+    "@pedaki/prettier-config": "^0.5.2-beta.11",
     "@types/react": "^18.2.64",
     "@types/sanitize-html": "^2.11.0",
     "autoprefixer": "^10.4.18",
