--- a/packages/pulumi/package.json
+++ b/packages/pulumi/package.json
@@ -22,7 +22,7 @@
   "author": "Nathan David <me@vahor.fr>",
   "license": "MIT",
   "dependencies": {
-    "@pedaki/common": "^0.4.2",
+    "@pedaki/common": "^0.5.2-beta.11",
     "@pedaki/logger": "workspace:*",
     "@pedaki/models": "workspace:*",
     "@pulumi/aws": "^6.25.0",
