--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.529.1",
     "@opentelemetry/api": "1.8.0",
-    "@pedaki/common": "^0.4.2",
+    "@pedaki/common": "^0.5.2-beta.11",
     "@pedaki/db": "workspace:*",
     "@pedaki/logger": "workspace:*",
     "@pedaki/models": "workspace:*",
