--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,22 +23,22 @@
   "author": "Nathan David <me@vahor.fr>",
   "license": "MIT",
   "dependencies": {
-    "@auth/prisma-adapter": "^1.5.0",
-    "@baselime/node-opentelemetry": "^0.4.3",
+    "@auth/prisma-adapter": "^1.5.1",
+    "@baselime/node-opentelemetry": "^0.4.8",
     "@fastify/cookie": "^9.3.1",
     "@fastify/cors": "^9.0.1",
     "@opentelemetry/api": "1.8.0",
     "@opentelemetry/instrumentation-fastify": "^0.34.0",
     "@opentelemetry/sdk-trace-node": "^1.22.0",
-    "@pedaki/common": "^0.5.2-beta.11",
+    "@pedaki/common": "0.5.2-beta.11",
     "@pedaki/db": "workspace:*",
     "@pedaki/logger": "workspace:*",
-    "@pedaki/mailer": "^0.5.2-beta.11",
+    "@pedaki/mailer": "0.5.2-beta.11",
     "@pedaki/models": "workspace:*",
     "@pedaki/pulumi": "workspace:*",
     "@pedaki/services": "workspace:*",
     "@t3-oss/env-core": "^0.9.2",
-    "@trpc/server": "10.45.1",
+    "@trpc/server": "10.45.2",
     "fastify": "^4.26.2",
     "fastify-raw-body": "^4.3.0",
     "next-auth": "^4.24.7",
@@ -48,7 +48,7 @@
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.5.1",
-    "@types/node": "^18.19.22",
+    "@types/node": "^18.19.26",
     "esbuild-plugin-tsconfig-paths": "^1.0.1",
     "preview-email": "^3.0.19",
     "tsx": "^4.7.1"
