--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -23,39 +23,39 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.5.0",
+    "@auth/prisma-adapter": "^1.5.1",
     "@hookform/resolvers": "^3.3.4",
     "@pedaki/api": "workspace:*",
-    "@pedaki/common": "^0.5.2-beta.11",
+    "@pedaki/common": "0.5.2-beta.11",
     "@pedaki/db": "workspace:*",
-    "@pedaki/design": "^0.5.2-beta.11",
+    "@pedaki/design": "0.5.2-beta.11",
     "@pedaki/models": "workspace:*",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/react-query": "^4.36.1",
-    "@trpc/client": "10.45.1",
-    "@trpc/next": "10.45.1",
-    "@trpc/react-query": "10.45.1",
-    "@trpc/server": "10.45.1",
+    "@trpc/client": "10.45.2",
+    "@trpc/next": "10.45.2",
+    "@trpc/react-query": "10.45.2",
+    "@trpc/server": "10.45.2",
     "cookies-next": "^4.1.1",
     "dayjs": "^1.11.10",
     "million": "^3.0.6",
-    "next": "14.1.2",
+    "next": "14.1.4",
     "next-international": "^1.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-wrap-balancer": "^1.1.0",
-    "sharp": "^0.33.2",
+    "sharp": "^0.33.3",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@pedaki/eslint-config": "^0.5.2-beta.11",
-    "@pedaki/prettier-config": "^0.5.2-beta.11",
-    "@types/react": "^18.2.64",
+    "@pedaki/eslint-config": "0.5.2-beta.11",
+    "@pedaki/prettier-config": "0.5.2-beta.11",
+    "@types/react": "^18.2.71",
     "@types/sanitize-html": "^2.11.0",
-    "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.35"
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38"
   },
   "engines": {
     "node": ">=18.0.0 <19.0.0",
