--- a/package.json
+++ b/package.json
@@ -28,27 +28,27 @@
     "husky": "^9.0.11"
   },
   "devDependencies": {
-    "@pedaki/eslint-config": "^0.5.2-beta.11",
-    "@pedaki/prettier-config": "^0.5.2-beta.11",
+    "@pedaki/eslint-config": "0.5.2-beta.11",
+    "@pedaki/prettier-config": "0.5.2-beta.11",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^18.19.22",
-    "@vitest/coverage-v8": "^1.3.1",
-    "cpy": "^11.0.0",
+    "@types/node": "^18.19.26",
+    "@vitest/coverage-v8": "^1.4.0",
+    "cpy": "^11.0.1",
     "cross-env": "^7.0.3",
     "dotenv-cli": "latest",
-    "esbuild": "^0.20.1",
+    "esbuild": "^0.20.2",
     "esbuild-plugin-file-path-extensions": "^2.0.0",
     "execa": "^8.0.1",
-    "expect-type": "^0.18.0",
+    "expect-type": "^0.19.0",
     "fs-extra": "^11.2.0",
     "lint-staged": "^15.2.2",
     "rimraf": "latest",
     "tsconfig-replace-paths": "^0.0.14",
     "tsup": "^8.0.2",
-    "turbo": "^1.12.5",
-    "typescript": "5.3",
-    "vitest": "^1.3.1"
+    "turbo": "^1.13.0",
+    "typescript": "~5.3.3",
+    "vitest": "^1.4.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
