--- a/packages/pulumi/package.json
+++ b/packages/pulumi/package.json
@@ -22,12 +22,12 @@
   "author": "Nathan David <me@vahor.fr>",
   "license": "MIT",
   "dependencies": {
-    "@pedaki/common": "^0.5.2-beta.11",
+    "@pedaki/common": "0.5.2-beta.11",
     "@pedaki/logger": "workspace:*",
     "@pedaki/models": "workspace:*",
-    "@pulumi/aws": "^6.25.0",
-    "@pulumi/cloudflare": "^5.22.0",
-    "@pulumi/pulumi": "^3.109.0",
+    "@pulumi/aws": "^6.27.0",
+    "@pulumi/cloudflare": "^5.23.0",
+    "@pulumi/pulumi": "^3.111.1",
     "@pulumi/random": "^4.16.0",
     "@t3-oss/env-core": "^0.9.2",
     "zod": "^3.22.4"
