--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,17 +23,17 @@
 	"author": "Nathan David <me@vahor.fr>",
 	"license": "MIT",
 	"dependencies": {
-		"@auth/prisma-adapter": "^1.6.0",
+		"@auth/prisma-adapter": "^2.0.0",
 		"@baselime/node-opentelemetry": "^0.5.8",
 		"@fastify/cookie": "^9.3.1",
 		"@fastify/cors": "^9.0.1",
 		"@opentelemetry/api": "1.8.0",
 		"@opentelemetry/instrumentation-fastify": "^0.35.0",
 		"@opentelemetry/sdk-trace-node": "^1.23.0",
-		"@pedaki/common": "0.5.2-beta.11",
+		"@pedaki/common": "0.5.3",
 		"@pedaki/db": "workspace:*",
 		"@pedaki/logger": "workspace:*",
-		"@pedaki/mailer": "0.5.2-beta.11",
+		"@pedaki/mailer": "0.5.3",
 		"@pedaki/models": "workspace:*",
 		"@pedaki/pulumi": "workspace:*",
 		"@pedaki/services": "workspace:*",
@@ -48,14 +48,14 @@
 	},
 	"devDependencies": {
 		"@total-typescript/ts-reset": "^0.5.1",
-		"@types/node": "^18.19.31",
+		"@types/node": "^20.12.7",
 		"esbuild-plugin-tsconfig-paths": "^1.0.1",
 		"preview-email": "^3.0.19",
 		"tsx": "^4.7.2"
 	},
 	"engines": {
-		"node": ">=18.0.0 <19.0.0",
-		"pnpm": ">=8.0.0",
+		"node": "20.x",
+		"pnpm": ">=9.0.0",
 		"yarn": "use-pnpm",
 		"npm": "use-pnpm"
 	}
