--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -23,12 +23,12 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
-		"@auth/prisma-adapter": "^1.6.0",
+		"@auth/prisma-adapter": "^2.0.0",
 		"@hookform/resolvers": "^3.3.4",
 		"@pedaki/api": "workspace:*",
-		"@pedaki/common": "0.5.2-beta.11",
+		"@pedaki/common": "0.5.3",
 		"@pedaki/db": "workspace:*",
-		"@pedaki/design": "0.5.2-beta.11",
+		"@pedaki/design": "0.5.3",
 		"@pedaki/models": "workspace:*",
 		"@t3-oss/env-nextjs": "^0.9.2",
 		"@tailwindcss/container-queries": "^0.1.1",
@@ -40,7 +40,7 @@
 		"cookies-next": "^4.1.1",
 		"dayjs": "^1.11.10",
 		"million": "^3.0.6",
-		"next": "14.2.0",
+		"next": "14.2.2",
 		"next-international": "^1.2.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -56,8 +56,8 @@
 		"postcss": "^8.4.38"
 	},
 	"engines": {
-		"node": ">=18.0.0 <19.0.0",
-		"pnpm": ">=8.0.0",
+		"node": "20.x",
+		"pnpm": ">=9.0.0",
 		"yarn": "use-pnpm",
 		"npm": "use-pnpm"
 	}
