--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -27,8 +27,8 @@
 		"zod": "^3.22.5"
 	},
 	"engines": {
-		"node": ">=18.0.0 <19.0.0",
-		"pnpm": ">=8.0.0",
+		"node": "20.x",
+		"pnpm": ">=9.0.0",
 		"yarn": "use-pnpm",
 		"npm": "use-pnpm"
 	}
