--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -26,8 +26,8 @@
 		"@prisma/client": "^5.12.1"
 	},
 	"engines": {
-		"node": ">=18.0.0 <19.0.0",
-		"pnpm": ">=8.0.0",
+		"node": "20.x",
+		"pnpm": ">=9.0.0",
 		"yarn": "use-pnpm",
 		"npm": "use-pnpm"
 	}
