--- a/packages/pulumi/package.json
+++ b/packages/pulumi/package.json
@@ -22,7 +22,7 @@
 	"author": "Nathan David <me@vahor.fr>",
 	"license": "MIT",
 	"dependencies": {
-		"@pedaki/common": "0.5.2-beta.11",
+		"@pedaki/common": "0.5.3",
 		"@pedaki/logger": "workspace:*",
 		"@pedaki/models": "workspace:*",
 		"@pulumi/aws": "^6.32.0",
@@ -36,8 +36,8 @@
 		"@total-typescript/ts-reset": "^0.5.1"
 	},
 	"engines": {
-		"node": ">=18.0.0 <19.0.0",
-		"pnpm": ">=8.0.0",
+		"node": "20.x",
+		"pnpm": ">=9.0.0",
 		"yarn": "use-pnpm",
 		"npm": "use-pnpm"
 	}
