--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -22,7 +22,7 @@
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.556.0",
 		"@opentelemetry/api": "1.8.0",
-		"@pedaki/common": "0.5.2-beta.11",
+		"@pedaki/common": "0.5.3",
 		"@pedaki/db": "workspace:*",
 		"@pedaki/logger": "workspace:*",
 		"@pedaki/models": "workspace:*",
@@ -41,8 +41,8 @@
 		"@types/jsonwebtoken": "^9.0.6"
 	},
 	"engines": {
-		"node": ">=18.0.0 <19.0.0",
-		"pnpm": ">=8.0.0",
+		"node": "20.x",
+		"pnpm": ">=9.0.0",
 		"yarn": "use-pnpm",
 		"npm": "use-pnpm"
 	}
